# flask_speaker_verification

./: .coverage  .gitattributes  Dockerfile  README.md  ResCNN_softmax_pre_training_checkpoint_102.h5  ResCNN_triplet_training_checkpoint_265.h5  Speaker_Verification.py  app.py  audio.py  batcher.py  cli.py  cli_updated.py  constants.py  conv_models.py  deep-speaker  docker-compose.yml  eval_metrics.py  pyproject.toml  requirements.txt  test_flask_speaker_verification.py  testing.py  triplet_loss.py  utils.py
.github/workflows/: build.yml  flask_speaker_verification.yml
.reuse/: dep5
