[tool.poetry]
name = "flask_speaker_verification"
version = "0.1.0"
description = ""
authors = ["WisamAbbasi <39978331+WisamAbbasi@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flask = "2.2.2"
natsort = ">=7.0.1"
librosa = ">=0.7.2"
dill = ">=0.3.1.1"
python_speech_features = ">=0.6"
tqdm = ">=4.45.0"
click = ">=7.1.1"
pandas = ">=1.0.3"
matplotlib = ">=3.2.1"
tensorflow = ">=2.3.0"
Keras = ">=2.3.1"
scipy = "<1.6.0"
numpy = ">=1.18.2"
numba = ">=0.48"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"